--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon src/index.ts",
     "build": "npm install && npm tsc",
     "start": "node ./dist/index.js",
-    "e2e": "cross-env DOTENV_CONFIG_PATH=.env.e2e nodemon"
+    "e2e": "cross-env DOTENV_CONFIG_PATH=.env.e2e nodemon src/index.ts"
   },
   "author": "",
   "license": "ISC",
